update(header): added no-wrap class to prevent text wrapping on mobile

--- a/app/public/assets/sass/_typography.scss
+++ b/app/public/assets/sass/_typography.scss
@@ -44,6 +44,10 @@ p {
     text-align: center;
 }
 
+.text--no-wrap {
+    white-space: nowrap;
+}
+
 .text--dim {
     color: $color-neutral-dim;
 }
